# pendulum_gz

./: README.md
rotary_pendulum_gz/: CMakeLists.txt  package.xml
rotary_pendulum_gz/config/: controllers.yaml
rotary_pendulum_gz/launch/: lqr_controller.launch.py  rotary_pendulum_sim.launch.py
rotary_pendulum_gz/scripts/: lqr_controller_node.py  pendulum_interface_node.py  reset_pendulum_service.py  state_plotter_node.py
rotary_pendulum_gz/urdf/: rotary_inverted_pendulum.urdf.xacro
rotary_pendulum_gz/worlds/: empty.sdf
